--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 700px) {
   body {
-    background-color: rgb(107, 155, 156);
+    background-color: rgb(6, 7, 7);
+    color: white;
   }
 
 
